
package mysql;

message tb_role_vip{
    required uint32 role_id = 1;
    required uint32 vip_lv = 2;
    required uint32 vip_exp = 3;
    required uint32 month_timeout = 4;
    required bytes list = 5;
    required bytes buy_record = 6;
}
